# ai_workshop_2025_minigrad

./: LICENSE  README.md  blank.ipynb  pyproject.toml  step_by_step.ipynb
engine/: engine.py  nn.py
